--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -3,7 +3,7 @@ layout: default
 title: docker?
 description: "docker 알아보기"
 permalink: /docker/1
-parent: docker
+parent: Docker
 nav_order: 2
 ---
 
