--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -11,7 +11,7 @@ nav_order: 2
 
 ![img](/assets/images/docker.jpeg)
 
-[ 갑분도커 ]   
+## 갑분도커   
 여느 때처럼 맘에 드는 라이브러리를 설치하여 **docker-compose up** 한 다음 이것저것 살펴 보다 문득 도커란 무엇이지? 라는 생각이 들었다.  
 
 그래 도커는 컨데이터 기반 가상화 플랫폼이지.  
@@ -21,19 +21,68 @@ nav_order: 2
 계속 된 질문에 내가 블로그를 하기로 마음먹었던 지난날이 떠올랐다.  
 그래. 질문에 답을 해보자라는 마음으로 첫 포스팅으로 도커의 내용부터 기록해보기로 한다.  
 
-[ 컨테이너 ]  
-* 컨테이너는 코드와 모든 종속성을 패키지화하여 응용 프로그램이
-한 컴퓨팅 환경에서 다른 컴퓨팅 환경으로 빠르고 안정적으로 실행되도록 하는 소프트웨어의 표준 단위
+## Container  
+* 컨테이너는 코드와 모든 종속성을 패키지화하여 응용 프로그램이 한 컴퓨팅 환경에서 다른 컴퓨팅 환경으로 빠르고 안정적으로 실행되도록 하는 소프트웨어의 표준 단위
 * 각각의 응용 프로그램을 동일한 환경에서 실행가능하도록 패키지화
     * 동일한 코드라면 어떤 pc에서 실행 시키더라도, 추가로 설치 해야 될 파일도 없고 실행 시 오류가 발생하지 않음
 
-> A container is a standard unit of software that packages up code and all its dependencies so the application runs quickly and reliably from one computing environment to another
+> A container is a standard unit of software that packages up code and all its dependencies so the application runs quickly and reliably from one computing environment to another  
 (https://www.docker.com/resources/what-container/)
 
-[ 컨테이너 이미지 ]
-* 컨테이너 이미지는 가상 머신이나 컨테이너 또는 프로그램을 실행하는 데 필요한 파일과 라이브러리, 설정 등을 가지고 있는 파일으로 레이어 계층 구조  
-    * 변경 사항이 생기면 기존 이미지에 새로운 레이어를 추가하여 기록
-    * 최신 버전의 이미지 다운 시, 기존 다운로드 받았던 이미지에서 추가 레이어만 다운받기 때문에 효율적
-* 컨테이너 이미지는 런타임에 컨테이너가 되고 도커 컨테이너의 경우 도커 엔진에서 실행될 때 이미지가 컨테이너가 된다. 
-> Container images become containers at runtime and in the case of Docker containers – images become containers when they run on Docker Engine. Available for both Linux and Windows-based applications, containerized software will always run the same, regardless of the infrastructure. Containers isolate software from its environment and ensure that it works uniformly despite differences for instance between development and staging.
-(https://www.docker.com/resources/what-container/)
+## Docker Image
+![img](https://phoenixnap.com/kb/wp-content/uploads/2021/04/container-layers.png)
+*https://phoenixnap.com/kb/docker-image-vs-container*
+
+* 컨테이너 생성 명령이 포함 된 일종의 read-only 템플릿
+    * read-only 속성으로 인해, 특정 시점의 애플리케이션과 가상환경을 나타내는 스냅샷 이라고 부르기도 함
+* 응용프로그램을 실행하는데 필요한 파일(소스코드, 라이브러리, 설정 ..)을 포함
+* Host OS 커널에 의존
+    <!--* 이미지 빌드 시 mac intel chip / m1 인 경우 설정이 약간 달랐던 이유 -->
+* 이미지는 Docker Hub에서 가져올수도 있으며, Dockerfile을 이용하여 수동으로 빌드할 수 있음  
+* 레이어 계층 구조이며, Base Image 기반으로 다양한 image layer 를 추가함으로써 무한으로 도커 이미지 생성 가능
+
+## Docker build  
+아래 간단한 Dockerfile 로 빌드 
+```cmd
+# dockerfile
+FROM alpine
+RUN command
+CMD ["echo","hello"]
+```
+```
+docker build -t wooim-layer:0.0.1 .
+Sending build context to Docker daemon  2.048kB
+Step 1/3 : FROM alpine
+ ---> 44dd6f223004
+Step 2/3 : RUN command
+ ---> Running in b584d9484b8d
+Removing intermediate container b584d9484b8d
+ ---> bd638b19c6b6
+Step 3/3 : CMD ["echo","hello"]
+ ---> Running in ca3b0f93fb2e
+Removing intermediate container ca3b0f93fb2e
+ ---> 19833282574e
+Successfully built 19833282574e
+Successfully tagged wooim-layer:0.0.1
+```
+해당 이미지 ID를 inspect 하면 layer 정보가 출력된다
+```
+docker image inspect [image ID]
+
+"RootFS": {
+            "Type": "layers",
+            "Layers": [
+                "sha256:94dd7d531fa5695c0c033dcb69f213c2b4c3b5a3ae6e497252ba88da87169c3f"
+            ]
+        }
+```
+
+<!--
+1. 가상화 및 하이퍼바이저 기록
+2. croup , 네임스페이스 기록하기
+-->
+
+[References]
+* https://phoenixnap.com/kb/docker-image-vs-container
+* https://circleci.com/blog/docker-image-vs-container
+* https://www.docker.com/resources/what-container
