--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -42,9 +42,9 @@ nav_order: 2
 * 레이어 계층 구조이며, Base Image 기반으로 다양한 image layer 를 추가함으로써 무한으로 도커 이미지 생성 가능
 
 ## Docker build  
-아래 간단한 Dockerfile 로 빌드 
-```cmd
-# dockerfile
+아래 간단한 Dockerfile 로 빌드 테스트  
+
+```
 FROM alpine
 RUN command
 CMD ["echo","hello"]
