--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -65,7 +65,8 @@ Removing intermediate container ca3b0f93fb2e
 Successfully built 19833282574e
 Successfully tagged wooim-layer:0.0.1
 ```
-해당 이미지 ID를 inspect 하면 layer 정보가 출력된다
+##### Running in / Removing intermediate container 문구를 통해 <br/> 임시 컨테이너를 생성하고, 해당 임시 컨테이너를 통해 새로운 이미지를 만들고 해당 임시 컨테이너는 삭제함을 알수있다.
+
 ```
 docker image inspect [image ID]
 
@@ -76,11 +77,14 @@ docker image inspect [image ID]
             ]
         }
 ```
+##### 해당 이미지 ID를 inspect 하면 layer 정보가 출력된다
 
 <!--
 1. 가상화 및 하이퍼바이저 기록
 2. croup , 네임스페이스 기록하기
 -->
+  
+<br/><br/><br/>  
 
 [References]
 * https://phoenixnap.com/kb/docker-image-vs-container
