--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -10,6 +10,7 @@ nav_order: 2
 
 
 ![img](/assets/images/docker.jpeg)
+*위 이미지를 제공해준 막내 동생에게 감사함을 전합니다.*
 
 ## 갑분도커   
 여느 때처럼 맘에 드는 라이브러리를 설치하여 **docker-compose up** 한 다음 이것저것 살펴 보다 문득 도커란 무엇이지? 라는 생각이 들었다.  
@@ -65,7 +66,7 @@ Removing intermediate container ca3b0f93fb2e
 Successfully built 19833282574e
 Successfully tagged wooim-layer:0.0.1
 ```
-##### Running in / Removing intermediate container 문구를 통해 <br/> 임시 컨테이너를 생성하고, 해당 임시 컨테이너를 통해 새로운 이미지를 만들고 해당 임시 컨테이너는 삭제함을 알수있다.
+##### Running in / Removing intermediate container 문구를 통해 <br/> 임시 컨테이너를 통해 새로운 이미지를 만들고, 해당 임시 컨테이너는 삭제함을 알수있다.
 
 ```
 docker image inspect [image ID]
