--- a/docs/docker/1.docker.md
+++ b/docs/docker/1.docker.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: docker?
-description: "갑자기 docker..?"
+title: Docker Container & Image
+description: "도커란"
 permalink: /docker/1
 parent: Docker
-nav_order: 2
+nav_order: 1
 ---
 
 
